src/css/supersloth.css
/**
 * SUPERSLOTH.JS
 * Created by kris (http://github.com/kriskbx - http://kris.cool)
 * Licensed under the MIT license
 */

body.supersloth {
    overflow: hidden !important;
}

#supersloth {
    position: absolute;
    top: 50%;
    left: 50%;
    font-size: 14px !important;
    margin-left: -19.535714286em;
    width: 39.071428571em;
    z-index: 9999999999;
    pointer-events: none;
}

#supersloth h1 {
    z-index: 3;
    margin: .25em 0 0 0;
    position: absolute;
    top: 0;
    left: 0;
    font-family: Arial;
    font-weight: bold;
    color: #fff;
    font-size: 5.714285714em;
    text-shadow: 0 1px 0 #ccc,
    0 2px 0 #c9c9c9,
    0 3px 0 #bbb,
    0 4px 0 #b9b9b9,
    0 5px 0 #aaa,
    0 6px 1px rgba(0, 0, 0, .1),
    0 0 5px rgba(0, 0, 0, .1),
    0 1px 3px rgba(0, 0, 0, .3),
    0 3px 5px rgba(0, 0, 0, .2),
    0 5px 10px rgba(0, 0, 0, .25),
    0 10px 10px rgba(0, 0, 0, .2),
    0 20px 20px rgba(0, 0, 0, .15);
    opacity: 0;
}

#supersloth h1.a {
    opacity: 1;
    animation: superTada 1s linear 0s 1, superFadeOut 0.7s linear 2s 1;
    transform-origin: 50% 50%;
    animation-fill-mode: forwards;
}

#supersloth h2 {
    z-index: 3;
    opacity: 0;
    font-size: 1.714285714em;
    margin: 0;
    position: absolute;
    top: -5em;
    left: 0;
    width: 100%;
    text-align: center;
    font-family: Arial;
    font-weight: bold;
    color: #ffe57f;
    text-transform: uppercase;
    letter-spacing: .416666667em;
    transition: all 400ms ease-out;
    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.7), 1px -1px 1px rgba(0, 0, 0, 0.7), -1px 1px 1px rgba(0, 0, 0, 0.7), 1px 1px 1px rgba(0, 0, 0, 0.7);
}

#supersloth h2.a {
    opacity: 1;
    top: 0.2em;
    animation: superFadeOut 2s linear;
    animation-delay: 500ms;
    animation-fill-mode: forwards;
}

#supersloth #superstripescontainer {
    overflow: hidden;
    width: 100%;
    padding: 0 10%;
    position: relative;
    margin: -12.1em auto 0 auto;
    border-bottom: 0.8em solid #c05a9a;
    box-sizing: border-box;
    opacity: 0;
    transition: all 100ms linear;
}

#supersloth #superstripescontainer:before {
    content: '';
    padding-bottom: 60%;
    display: block;
}

#supersloth #superstripescontainer.a {
    opacity: 1;
    animation: superFadeOut 0.7s linear 2s 1;
    animation-fill-mode: forwards;
}

#supersloth #superstripes {
    position: absolute;
    width: 100%;
    top: 100%;
    left: 0;
    margin: 0 auto;
    background-image: url('../img/stripes.png');
    background-size: contain;
    background-repeat: no-repeat;
    transition: all 400ms ease-out;
}

#supersloth #superstripescontainer.a #superstripes {
    top: 0;
    animation: superStripeRotate 10s linear infinite;
}

#supersloth #superstripes:before {
    content: '';
    padding-bottom: 100%;
    display: block;
}

#supersloth #superslothy {
    width: 190px;
    height: 190px;
    overflow: hidden;
    z-index: 2;
    background-repeat: no-repeat;
    background-position: 0 0;
    opacity: 0;
    transition: all 100ms ease;
    position: absolute;
    top: 0em;
    left: 50%;
    margin-left: -95px;
    background-image: url('../img/sloth.png');
}

#supersloth #superslothy.a {
    opacity: 1;
    animation: superFlyingCapeAnimation 200ms steps(1) 0s 4, superFlyingAnimation 600ms ease-out 0s 1, superLandingCapeAnimation 200ms steps(1) 800ms 8, superLandingAnimation 1.6s ease 800ms 1, superMegaFlyingAnimation 300ms ease-in 2.4s 1, superMegaFlyingCapeAnimation 200ms steps(1) 2.4s 8;
    animation-fill-mode: forwards;
}

@keyframes superTada {
    0% {
        transform: rotate(0deg) scaleX(0) scaleY(0);
    }
    10% {
        transform: rotate(-3deg) scaleX(0.80) scaleY(0.80);
    }
    20% {
        transform: rotate(-3deg) scaleX(0.80) scaleY(0.80);
    }
    30% {
        transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
    }
    40% {
        transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
    }
    50% {
        transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
    }
    60% {
        transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
    }
    70% {
        transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
    }
    80% {
        transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
    }
    90% {
        transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
    }
    100% {
        transform: rotate(0deg) scaleX(1) scaleY(1);
    }
}

@keyframes superFlyingAnimation {
    0% {
        top: 0em;
    }
    100% {
        top: -15em;
    }
}

@keyframes superLandingAnimation {
    0% {
        top: -15em;
    }
    100% {
        top: -6em;
    }
}

@keyframes superMegaFlyingAnimation {
    0% {
        transform: scale(1);
        top: -6em;
        opacity: 1;
        z-index: 4;
    }
    100% {
        transform: scale(4);
        top: 0;
        opacity: 0;
    }
}

@keyframes superFlyingCapeAnimation {
    0% {
        background-position: 0px 0px;
    }
    50% {
        background-position: -190px 0px;
    }
    100% {
        background-position: 0px 0px;
    }
}

@keyframes superLandingCapeAnimation {
    0% {
        background-position: -380px 0px;
    }
    50% {
        background-position: -570px 0px;
    }
    100% {
        background-position: -380px 0px;
    }
}

@keyframes superMegaFlyingCapeAnimation {
    0% {
        background-position: -760px 0px;
    }
    50% {
        background-position: -950px 0px;
    }
    100% {
        background-position: -760px 0px;
    }
}

@keyframes superFadeOut {
    from {
        opacity: 1;
    }
    to {
        opacity: 0;
    }
}

@keyframes superStripeRotate {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

